tests/ui/args-unsupported-data.stderr
error: only structs with named fields are supported
 --> tests/ui/args-unsupported-data.rs:3:10
  |
3 | #[derive(Args)]
  |          ^^^^
  |
  = note: this error originates in the derive macro `Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error: only structs with named fields are supported
 --> tests/ui/args-unsupported-data.rs:6:10
  |
6 | #[derive(Args)]
  |          ^^^^
  |
  = note: this error originates in the derive macro `Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error: only structs with named fields are supported
 --> tests/ui/args-unsupported-data.rs:9:10
  |
9 | #[derive(Args)]
  |          ^^^^
  |
  = note: this error originates in the derive macro `Args` (in Nightly builds, run with -Z macro-backtrace for more info)

error: only structs with named fields are supported
  --> tests/ui/args-unsupported-data.rs:14:10
   |
14 | #[derive(Args)]
   |          ^^^^
   |
   = note: this error originates in the derive macro `Args` (in Nightly builds, run with -Z macro-backtrace for more info)
